<resources>
    <string name="yafi_ns">http://schemas.android.com/apk/res/pl.mg6.yafi.lib</string>
    <string name="app_name">Yafi</string>
    <string name="fics">FICS</string>
    <string name="checking_license">Checking license…</string>
    <string name="homepage">Home page</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="username">Handle (username)</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="connecting">Connecting…</string>
    <string name="sending_username">Sending username.</string>
    <string name="sending_password">Sending password.</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="unable_to_log_on">Unable to log on</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="unable_to_connect_message">Please check your Internet connection settings.</string>
    <string name="error_check_in_progress">Error: check in progress. If this problem persists, please contact developer.</string>
	<string name="error_invalid_package_name">Error: invalid package name. If this problem persists, please contact developer.</string>
	<string name="error_invalid_public_key">Error: invalid public key. If this problem persists, please contact developer.</string>
	<string name="error_missing_permission">Error: missing permission. If this problem persists, please contact developer.</string>
	<string name="error_non_matching_uid">Error: non matching uid. If this problem persists, please contact developer.</string>
	<string name="error_not_market_managed">Error: not market managed. If this problem persists, please contact developer.</string>
	<string name="error_not_licensed">Application is not licensed to this device. If you believe this is not correct, please contact developer.</string>
	<string name="error_retry">Could not connect to licensing server. Please check your Internet connection settings and try again.</string>
	<string name="error_unknown_code">Error: unknown, code: %d. If this problem persists, please contact developer.</string>
    <string name="go_to_market">Contact / Buy</string>
    <string name="board">Board</string>
    <string name="chat">Chat</string>
    <string name="seek">Seek\na game</string>
    <string name="sought">Sought\ngames</string>
    <string name="match">Match</string>
    <string name="challenges">Challenges</string>
    <string name="search_for_game">Search for game</string>
    <string name="console">Console</string>
    <string name="preferences">Preferences</string>
    <string name="issue_tracker">Bugs? Requests? Issue tracker</string>
    <string name="contact">Feedback? Contact developer</string>
    <string name="messages_and_news">Messages\nand news</string>
    <string name="send">Send</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="previous_command">Prev cmd</string>
    <string name="previous_commands">Prev cmds</string>
    <string name="draw">Draw</string>
    <string name="abort">Abort</string>
    <string name="resign">Resign</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="withdraw">Withdraw</string>
    <string name="unobserve">Stop observing</string>
    <string name="unexamine">Stop examining</string>
    <string name="examine">Examine</string>
    <string name="time">Time (minutes)</string>
    <string name="increment">Increment (seconds)</string>
    <string name="rated">Rated</string>
    <string name="flip">Flip</string>
    <string name="show_controls">Show controls</string>
    <string name="hide_controls">Hide controls</string>
    <string name="observe_high_rated_blitz">Observe high rated blitz game</string>
    <string name="observe_high_rated_standard">Observe high rated standard game</string>
    <string name="informations">Informations</string>
    <string name="accessibility_board_first">Go to starting position</string>
    <string name="accessibility_board_previous">Go to previous position</string>
    <string name="accessibility_board_next">Go to next position</string>
    <string name="accessibility_board_last">Go to current position</string>
    <string name="getting_sought_items">Getting sought items</string>
    <string name="game_type">Game type</string>
    <string name="opponent">Opponent</string>
    <string name="sought_time">Time</string>
    <string name="no_sought_items">No sought items</string>
    <string name="you_are_playing_or_examining">You are playing or examining a game.\nSought information will not be displayed.</string>
    <string name="you_may_not_announce">You may not announce.</string>
    <string name="want_to_disconnect_question">Do you want to disconnect?</string>
    <string name="confirm_disconnect">Confirm disconnection</string>
    <string name="disconnected">Disconnected</string>
    <string name="ok">OK</string>
    <string name="new_version_available">New version of Yafi available!</string>
    <string name="update">Update</string>
    <string name="if_enjoy_please_rate">If you enjoy using Yafi,\nplease take a moment to rate it.</string>
    <string name="rate_yafi">Rate Yafi</string>
    <string name="enter_username">Enter username</string>
    <string name="board_no_game_description">To start playing, go to "Sought" screen and choose game posted by other player.</string>
    <string name="illegal_move">Illegal move.</string>
    <string name="draw_offered">Draw offered.</string>
    <string name="abort_requested">Abort requested.</string>
    <string name="input_method">Input method</string>
    <string name="input_method_summary">%s</string>
    <string name="colors">Colors</string>
    <string name="colors_summary">%s</string>
    <string name="loading">Loading…</string>
    <string name="games_adjourned">Adjourned games</string>
    <string name="games_history">Recent history</string>
    <string name="games_journal">Journal entries</string>
    <string name="adjourned_empty">No adjourned games.</string>
    <string name="history_empty">No history games.</string>
    <string name="journal_empty">No journal games.</string>
    <string name="journal_private">Journal is private.</string>
    <string name="refresh">Refresh</string>
    <string name="type_blitz">Blitz</string>
    <string name="type_standard">Standard</string>
    <string name="type_lightning">Lightning</string>
    <string name="type_wild">Wild</string>
    <string name="type_bughouse">Bughouse</string>
    <string name="type_crazyhouse">Crazyhouse</string>
    <string name="type_suicide">Suicide</string>
    <string name="type_losers">Losers</string>
    <string name="type_atomic">Atomic</string>
    <string name="received_offers">Received offers</string>
    <string name="sent_offers">Sent offers</string>
    <string name="challenges_getting">Getting challenges list</string>
    <string name="challenges_sent_empty">No offers sent.</string>
    <string name="challenges_received_empty">No offers received.</string>
    <string name="listusers_getting">Getting users list</string>
    <string name="title_admin">Administrator</string>
    <string name="title_sr">Service Representative</string>
    <string name="title_tm">Tournament Manager</string>
    <string name="title_td">Non-playing Computer Program</string>
    <string name="title_advisor">Chess Advisor</string>
    <string name="title_comp">Computer Program</string>
    <string name="title_unreg">Unregistered User</string>
    <string name="title_blind">Blindfolded User</string>
    <string name="title_team">Team Account</string>
    <string name="title_demo">Demonstration Account</string>
    <string name="title_gm">Grandmaster</string>
    <string name="title_im">International Master</string>
    <string name="title_fm">FIDE Master</string>
    <string name="title_wgm">Woman Grandmaster</string>
    <string name="title_wim">Woman International Master</string>
    <string name="title_wfm">Woman FIDE Master</string>
    <string name="var_interface">Interface: &lt;b>%s&lt;/b></string>
    <string name="messages">Messages</string>
    <string name="no_new_messages">You have no new messages.</string>
    <string name="show_all">Show all</string>
    <string name="no_messages">You have no messages.</string>
    <string name="only_registered_can_have_messages">Only registered users may send and receive messages.</string>
    <string name="news">News</string>
    <string name="no_new_news">There are no new news items.</string>
    <string name="show_older">Show older</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="game_end">Game ended</string>
    <string name="rematch">Offer rematch</string>
    <string-array name="types">
        <item>Chess</item>
        <item>Suicide</item>
        <item>Atomic</item>
        <item>Losers</item>
        <item>Fischer Random</item>
        <item>Upside Down</item>
    </string-array>
    <string-array name="types_ids">
        <item>chess</item>
        <item>suicide</item>
        <item>atomic</item>
        <item>losers</item>
        <item>wfr</item>
        <item>w5</item>
    </string-array>
    <string-array name="sought_game_types">
        <item>All</item>
        <item>Chess</item>
        <item>Variants</item>
        <item>Suicide</item>
        <item>Atomic</item>
        <item>Losers</item>
        <item>Wild</item>
        <item>Fischer Random</item>
        <item>Upside Down</item>
        <item>Other</item>
    </string-array>
    <string-array name="sought_game_types_pattern">
        <item>.*</item>
        <item>chess|blitz|standard|lightning</item>
        <item>(?!chess|blitz|standard|lightning).*</item>
        <item>suicide</item>
        <item>atomic</item>
        <item>losers</item>
        <item>wild/.*</item>
        <item>wild/fr</item>
        <item>wild/5</item>
        <item>(?!chess|blitz|standard|lightning|suicide|atomic|losers|wild/.*).*</item>
    </string-array>
    <string-array name="sought_opponents">
        <item>All</item>
        <item>Registered users</item>
        <item>Guests</item>
        <item>Computers</item>
        <item>Rating: under 1200</item>
        <item>Rating: 1000–1499</item>
        <item>Rating: 1300–1799</item>
        <item>Rating: 1600–2099</item>
        <item>Rating: 1900 and above</item>
    </string-array>
    <string-array name="sought_times">
        <item>All</item>
        <item>Blitz</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>Standard</item>
        <item>15 minutes</item>
        <item>Lightning</item>
    </string-array>
    <string-array name="board_input_methods">
        <item>Drag and Drop</item>
        <item>Click Click</item>
        <item>Both</item>
    </string-array>
    <string-array name="board_input_methods_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="board_colors">
        <item>Default</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Butter Chameleon</item>
        <item>Sky Plum</item>
        <item>Scarlet Aluminium</item>
    </string-array>
</resources>