<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="onRefreshClick"
        android:text="@string/refresh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_offers" />

    <ListView
        android:id="@+id/challenges_list_sent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:id="@+id/challenges_list_sent_empty"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/challenges_getting" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_offers" />

    <ListView
        android:id="@+id/challenges_list_received"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >
    </ListView>

    <TextView
        android:id="@+id/challenges_list_received_empty"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/challenges_getting" />

</LinearLayout>